testbed/kind/mel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextensio-mgr
  labels:
    app: nextensio-mgr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextensio-mgr
  template:
    metadata:
      labels:
        app: nextensio-mgr
        role: mel
    spec:
      containers:
      - name: mel
        image: registry.gitlab.com/nextensio/clustermgr/mel:latest
        imagePullPolicy: IfNotPresent
        stdin: true 
        tty: true
