testbed/kind/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextensio-controller
  labels:
    app: nextensio-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextensio-controller
  template:
    metadata:
      labels:
        app: nextensio-controller
        role: controller
    spec:
      containers:
      - name: controller
        image: registry.gitlab.com/nextensio/controller/controller:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: secret-volume
            mountPath: /etc/nxt-certs
        stdin: true 
        tty: true 
        ports:
        - containerPort: 8080
      volumes:
        - name: secret-volume
          secret:
            secretName: controller-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextensio-ux
  labels:
    app: nextensio-ux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextensio-ux
  template:
    metadata:
      labels:
        app: nextensio-ux
        role: ux
    spec:
      containers:
      - name: ux
        image: registry.gitlab.com/nextensio/ux/ux:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: secret-volume
            mountPath: /etc/nxt-certs
        stdin: true 
        tty: true 
        ports:
        - containerPort: 443
      volumes:
        - name: secret-volume
          secret:
            secretName: controller-cert
---
apiVersion: v1
kind: Service
metadata:
  name: nextensio-ux
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
spec:
  selector:
    app: nextensio-ux
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: nextensio-controller
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
spec:
  selector:
    app: nextensio-controller
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
