testbed/kind/mongo.yaml
---
  apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    # namespace: mongo
    name: azure-managed-disk-mongodb-0
  spec:
    accessModes:
    - ReadWriteOnce
    storageClassName: local-path
    resources:
      requests:
        storage: 100Mi
---
  apiVersion: v1
  kind: Service
  metadata:
    # namespace: mongo
    name: mongodb-0-service
    annotations:
      metallb.universe.tf/allow-shared-ip: shared
    labels:
      run: mongodb-0-service
  spec:
    ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
    type: LoadBalancer
    selector:
      service: mongodb-0
---
  apiVersion: v1
  kind: Pod
  metadata:
    # namespace: mongo
    name: mongodb-0
    labels:
      env: test
      service: mongodb-0
  spec:
    containers:
    - image: gopakumarce/mongodb-replica-set:20200330-stable-1
      imagePullPolicy: IfNotPresent
      name: mongodb-0
      livenessProbe:
        exec:
          command:
          - /bin/bash
          - -c
          - mongo --quiet --eval "db.getMongo()"
        initialDelaySeconds: 5
        periodSeconds: 5
      ports:
      - containerPort: 27017
      volumeMounts:
        - name: mongodb-0-volume
          mountPath: "/data/db"
    volumes:
      - name: mongodb-0-volume
        persistentVolumeClaim:
          claimName: azure-managed-disk-mongodb-0
---
  apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    # namespace: mongo
    name: azure-managed-disk-mongodb-1
  spec:
    accessModes:
    - ReadWriteOnce
    storageClassName: local-path
    resources:
      requests:
        storage: 100Mi
---
  apiVersion: v1
  kind: Service
  metadata:
    # namespace: mongo
    name: mongodb-1-service
    annotations:
      metallb.universe.tf/allow-shared-ip: shared
    labels:
      run: mongodb-1-service
  spec:
    ports:
    - port: 27018
      targetPort: 27017
      protocol: TCP
    type: LoadBalancer
    selector:
      service: mongodb-1
---
  apiVersion: v1
  kind: Pod
  metadata:
    # namespace: mongo
    name: mongodb-1
    labels:
      env: test
      service: mongodb-1
  spec:
    containers:
    - image: gopakumarce/mongodb-replica-set:20200330-stable-1
      imagePullPolicy: IfNotPresent
      name: mongodb-1
      livenessProbe:
        exec:
          command:
          - /bin/bash
          - -c
          - mongo --eval "db.getMongo()"
        initialDelaySeconds: 5
        periodSeconds: 5
      ports:
      - containerPort: 27017
      volumeMounts:
        - name: mongodb-1-volume
          mountPath: "/data/db"
    volumes:
      - name: mongodb-1-volume
        persistentVolumeClaim:
          claimName: azure-managed-disk-mongodb-1
---
  apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    # namespace: mongo
    name: azure-managed-disk-mongodb-2
  spec:
    accessModes:
    - ReadWriteOnce
    storageClassName: local-path
    resources:
      requests:
        storage: 100Mi
---
  apiVersion: v1
  kind: Service
  metadata:
    # namespace: mongo
    name: mongodb-2-service
    annotations:
      metallb.universe.tf/allow-shared-ip: shared
    labels:
      run: mongodb-2-service
  spec:
    ports:
    - port: 27019
      targetPort: 27017
      protocol: TCP
    type: LoadBalancer
    selector:
      service: mongodb-2
---
  apiVersion: v1
  kind: Pod
  metadata:
    # namespace: mongo
    name: mongodb-2
    labels:
      env: test
      service: mongodb-2
  spec:
    containers:
    - image: gopakumarce/mongodb-replica-set:20200330-stable-1
      imagePullPolicy: IfNotPresent
      name: mongodb-2
      livenessProbe:
        exec:
          command:
          - /bin/bash
          - -c
          - mongo --quiet --eval "db.getMongo()"
        initialDelaySeconds: 5
        periodSeconds: 5
      ports:
      - containerPort: 27017
      volumeMounts:
        - name: mongodb-2-volume
          mountPath: "/data/db"
    volumes:
      - name: mongodb-2-volume
        persistentVolumeClaim:
          claimName: azure-managed-disk-mongodb-2
---
