testbed/kind/flow_control.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: nextensio-limit-buffering
  namespace: istio-system
spec:
  configPatches:
    - applyTo: CLUSTER
      match:
        cluster:
          portNumber: 80
      patch:
        operation: MERGE
        value:
          http2_protocol_options:
            initial_stream_window_size: 65536  
            initial_connection_window_size: 65536 
          per_connection_buffer_limit_bytes: 65536
    - applyTo: CLUSTER
      patch:
        operation: MERGE
        value:
          per_connection_buffer_limit_bytes: 65536
    - applyTo: NETWORK_FILTER
      match:
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager"
            http2_protocol_options:
              max_concurrent_streams: 100000
              initial_stream_window_size: 65536
              initial_connection_window_size: 65536
    - applyTo: LISTENER
      patch:
        operation: MERGE
        value:
          per_connection_buffer_limit_bytes: 65536
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: nextensio-limit-buffering
  namespace: nextensio
spec:
  configPatches:
    - applyTo: CLUSTER
      match:
        cluster:
          portNumber: 80
      patch:
        operation: MERGE
        value:
          http2_protocol_options:
            initial_stream_window_size: 65536  
            initial_connection_window_size: 65536 
          per_connection_buffer_limit_bytes: 65536
    - applyTo: CLUSTER
      patch:
        operation: MERGE
        value:
          per_connection_buffer_limit_bytes: 65536
    - applyTo: NETWORK_FILTER
      match:
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager"
            http2_protocol_options:
              max_concurrent_streams: 100000
              initial_stream_window_size: 65536
              initial_connection_window_size: 65536
    - applyTo: LISTENER
      patch:
        operation: MERGE
        value:
          per_connection_buffer_limit_bytes: 65536
